# rust-bitcoin-miner

./: .gitignore  README.md
backend/raspberrypi/miner/: Cargo.toml
backend/raspberrypi/miner/src/: main.rs
dashboard/: index.html  launcher.html  launcher.js  main.js  package-lock.json  package.json  preload.js  renderer.js
